--- a/src/components/alg/alg-conspect/sp1/pages/elem-spNvsb2018.html
+++ b/src/components/alg/alg-conspect/sp1/pages/elem-spNvsb2018.html
@@ -6,7 +6,7 @@
 
 
 <article class="article">
-  <h1>Контест май 2025</h1>
+  <h1>Контест 2018 Личное первенство Новосибирска</h1>
   <p><a href="https://codeforces.com/group/1LSR3R5twn/contest/609334" target="_blank">Codeforces Контест 609334</a></p>
 </article>
 
