--- a/src/components/alg/alg-pract/acmp/pages/elem-acmp-01.html
+++ b/src/components/alg/alg-pract/acmp/pages/elem-acmp-01.html
@@ -1,10 +1,22 @@
-<h1>acmp 01</h1>
+<article class="article">
+  <h1>Школа программиста</h1>
+  <p><a href="https://acmp.ru/" target="_blank">acmp.ru</a></p>
+</article>
 
-<!-- Ссылки -->
-<div class="article">
-  <h2>Ссылки</h2>
 
-  <p><a href="https://acmp.ru/">acmp.ru</a></p>
+<!-- Содержание -->
+<article class="article">
+  <h2>Содержание</h2>
+
+  <a href="#about">about</a>
+</article>
+
+
+<!-- about -->
+<article class="article">
+  <div class="anchor" id="about"></div>
+  <h3>about</h3>
+
   <p>Данный проект создан для повышения у школьников Красноярского края уровня программирования и способностей, направленных на решение олимпиадных задач. Надеемся, что наш проект найдет массу заинтересованных в этой области людей, желающих оказать поддержку в развитии олимпиадного и спортивного программирования в Красноярском крае.</p>
   <p>Сайт содержит архив задач по олимпиадному программированию со встроенной проверяющей системой. Для участия в системе достаточно зарегистрироваться и перейти в раздел "Архив задач", где на текущий момент Вам будет предложено решить 1000 задач различной сложности. Сложность задач определяется числом от 1 до 100, из этих значений сложности формируется рейтинг, отражаемый в разделе "Рейтинг".</p>
   <p>Уровень представленных здесь задач значительно легче задач, расположенных на подобных площадках. Поэтому большинство задач возможно решить после одного года обучения программированию. Средняя сложность задач немного ниже уровня задач районных олимпиад, что позволяет успешно готовиться к ним, решая задачи здесь. Сайт ориентирован на преимущественно школьную аудиторию и представляет малый интерес для студентов ВУЗов, занимающихся олимпиадным программированием и имеющих больший опыт. В последствии в процессе роста навыков программирования предполагается плавный переход с этой системы на более серьезные, например, acm.timus.ru, где представлены более серьезные задачи. Эту систему можно рассматривать как базовую в подготовке к решению задач по программированию.</p>
