--- a/src/components/alg/alg-pract/timus/pages/elem-timus-01.html
+++ b/src/components/alg/alg-pract/timus/pages/elem-timus-01.html
@@ -1,13 +1,25 @@
-<h1>timus 01</h1>
+<article class="article">
+  <h1>acm.timus</h1>
+  <p><a href="https://acm.timus.ru/" target="_blank">acm.timus.ru</a></p>
+  <p><a href="https://timus.online/" target="_blank">timus.online</a></p>
+</article>
 
-<!-- Ссылки -->
-<div class="article">
-  <h2>Ссылки</h2>
 
-  <p><a href="https://acm.timus.ru/">acm.timus.ru</a></p>
-  <p><a href="https://timus.online/">timus.online</a></p>
+<!-- Содержание -->
+<article class="article">
+  <h2>Содержание</h2>
+
+  <a href="#about">about</a>
+</article>
+
+
+<!-- about -->
+<article class="article">
+  <div class="anchor" id="about"></div>
+  <h3>about</h3>
+
   <p>Timus Online Judge — это крупнейший в России архив задач по программированию с автоматической проверяющей системой. Основной источник задач для архива — соревнования Уральского федерального университета, Чемпионаты Урала, Уральские четвертьфиналы ICPC, Петрозаводские сборы по программированию</p>
-</div>
+</article>
 
 
 
