--- a/src/components/code/code-asm/asm-books/pages/elem-book1.html
+++ b/src/components/code/code-asm/asm-books/pages/elem-book1.html
@@ -1,21 +1,24 @@
-<h1>Конспект книги Питер Абель "Язык ассемблера для IBM PC и программирования"</h1>
+<article class="article">
+  <h1>1992 Питер Абель - Язык ассемблера для IBM PC и программирования. 447c</h1>
+  <p>Конспект книги</p>
+</article>
 
 
 <!-- Содержание -->
-<div class="article article__content">
+<article class="article">
   <h2>Содержание</h2>
 
-  <p><a href="#links">links</a></p>
-  <p><a href="#about">about</a></p>
-  <p><a href="#install">install</a></p>
-  <p><a href="#pred">Предисловие</a></p>
-  <p><a href="#g1">Глава 1. Введение в семейство компьютеров IBM PC</a></p>
-  <p><a href="#g2">Глава 2. Машинное исполнение</a></p>
-  <p><a href="#task1">&nbsp;&nbsp;Практика 1. Просмотр памяти</a></p>
-  <p><a href="#task2">&nbsp;&nbsp;Практика 2. Пример машинных кодов: непосредственные данные</a></p>
-  <p><a href="#task3">&nbsp;&nbsp;Практика 3. Пример машинных кодов: определение данных</a></p>
-  <p><a href="#err">Опечатки: стр.36,38</a></p>
-</div>
+    <a href="#links">links</a>
+  <br><a href="#about">about</a>
+  <br><a href="#install">install</a>
+  <br><a href="#pred">Предисловие</a>
+  <br><a href="#g1">Глава 1. Введение в семейство компьютеров IBM PC</a>
+  <br><a href="#g2">Глава 2. Машинное исполнение</a>
+  <br><a href="#task1">&nbsp;&nbsp;Практика 1. Просмотр памяти</a>
+  <br><a href="#task2">&nbsp;&nbsp;Практика 2. Пример машинных кодов: непосредственные данные</a>
+  <br><a href="#task3">&nbsp;&nbsp;Практика 3. Пример машинных кодов: определение данных</a>
+  <br><a href="#err">Опечатки: стр.36,38</a>
+</article>
 
 
 <!-- links -->
