--- a/src/components/front/front-learned/pages/elem-day.html
+++ b/src/components/front/front-learned/pages/elem-day.html
@@ -2,17 +2,81 @@
 
 <ol reversed>
 
+  <li>2025.05.26 пн
+    <br>1. <strong>Книга</strong> <i>2020 Дейтел - Как программировать на C 1000стр</i> прочитать 490-510стр
+    <br>2. <strong>Книга</strong> <i>2015 Кузин - Программирование на языке Си 144стр</i> прочитать 110-120стр
+    <br>3. <strong>Курс</strong> <i>2023 ФТЛ Спортпрог c++</i> Занятие 7 закончить конспект
+    <br>4. <strong>Курс</strong> <i>2023 ФТЛ Спортпрог c++</i> Занятие 8 начать конспект
+  </li>
+
+  <li>2025.05.24 сб
+    <br>1. <strong>Книга</strong> <i>2020 Дейтел - Как программировать на C 1000стр</i> прочитать 480-490стр
+    <br>2. <strong>Книга</strong> <i>2015 Кузин - Программирование на языке Си 144стр</i> прочитать 100-110стр
+    <br>3. <strong>Курс</strong> <i>2023 ФТЛ Спортпрог c++</i> Занятие 6 закончить конспект
+    <br>4. <strong>Курс</strong> <i>2023 ФТЛ Спортпрог c++</i> Занятие 7 начать конспект
+  </li>
+
+  <li>2025.05.23 пт
+    <br>1. <strong>Книга</strong> <i>2020 Дейтел - Как программировать на C 1000стр</i> прочитать 470-480стр
+    <br>2. <strong>Книга</strong> <i>2015 Кузин - Программирование на языке Си 144стр</i> прочитать 90-100стр
+    <br>3. <strong>Курс</strong> <i>2023 ФТЛ Спортпрог c++</i> Занятие 5 закончить конспект
+    <br>4. <strong>Курс</strong> <i>2023 ФТЛ Спортпрог c++</i> Занятие 6 начать конспект
+  </li>
+
+  <li>2025.05.22 чт
+    <br>1. <strong>Книга</strong> <i>2020 Дейтел - Как программировать на C 1000стр</i> прочитать 460-470стр
+    <br>2. <strong>Книга</strong> <i>2015 Кузин - Программирование на языке Си 144стр</i> прочитать 80-90стр
+    <br>3. <strong>Курс</strong> <i>2023 ФТЛ Спортпрог c++</i> Занятие 5 начать конспект
+  </li>
+
+  <li>2025.05.21 ср
+    <br>1. <strong>Книга</strong> <i>2020 Дейтел - Как программировать на C 1000стр</i> прочитать 450-460стр
+    <br>2. <strong>Книга</strong> <i>2015 Кузин - Программирование на языке Си 144стр</i> прочитать 70-80стр
+    <br>3. <strong>Курс</strong> <i>2023 ФТЛ Спортпрог c++</i> Занятие 4 закончить конспект
+  </li>
+
+  <li>2025.05.20 вт
+    <br>1. <strong>Книга</strong> <i>2020 Дейтел - Как программировать на C 1000стр</i> прочитать 440-450стр
+    <br>2. <strong>Книга</strong> <i>2015 Кузин - Программирование на языке Си 144стр</i> прочитать 60-70стр
+    <br>3. <strong>Курс</strong> <i>2023 ФТЛ Спортпрог c++</i> Занятие 2 закончить конспект
+    <br>4. <strong>Курс</strong> <i>2023 ФТЛ Спортпрог c++</i> Занятие 3 сделать конспект
+    <br>5. <strong>Курс</strong> <i>2023 ФТЛ Спортпрог c++</i> Занятие 4 начать конспект
+  </li>
+
+  <li>2025.05.19 пн
+    <br>1. <strong>Книга</strong> <i>2020 Дейтел - Как программировать на C 1000стр</i> прочитать 430-440стр
+    <br>2. <strong>Книга</strong> <i>2015 Кузин - Программирование на языке Си 144стр</i> прочитать 50-60стр
+    <br>3. <strong>Курс</strong> <i>2023 ФТЛ Спортпрог c++</i> Занятие 1 сделать конспект
+    <br>4. <strong>Курс</strong> <i>2023 ФТЛ Спортпрог c++</i> Занятие 2 начать конспект
+    <br>Чай Muhamad Khair 12 специй: кардамон, гвоздика, корица, кориандр, семена тмина, черный перец, красный перец, чили, булава, семена сладкого тмина, зведчатый анис, имбирь и цветок синей мальвы.
+    <br>Чай Basilur Masala 6 специй: кардамон, гвоздика, корица, имбирь, мускатный орех, перец.
+  </li>
+
+  <li>2025.05.17 сб
+    <br>1. <strong>Книга</strong> <i>2020 Дейтел - Как программировать на C 1000стр</i> прочитать 420-430стр
+    <br>2. <strong>Книга</strong> <i>2015 Кузин - Программирование на языке Си 144стр</i> прочитать 40-50стр
+    <br>3. <strong>Курс</strong> <i>2023 ФТЛ Спортпрог c++</i> Занятие 3 закончить
+    <br>4. <strong>Курс</strong> <i>2023 ФТЛ Спортпрог c++</i> Занятие 4 начать
+  </li>
+
+  <li>2025.05.16 пт
+    <br>1. <strong>Книга</strong> <i>2020 Дейтел - Как программировать на C 1000стр</i> прочитать 410-420стр
+    <br>2. <strong>Книга</strong> <i>2015 Кузин - Программирование на языке Си 144стр</i> прочитать 30-40стр
+    <br>3. <strong>Курс</strong> <i>2023 ФТЛ Спортпрог c++</i> Занятие 2 закончить
+    <br>4. <strong>Курс</strong> <i>2023 ФТЛ Спортпрог c++</i> Занятие 3 начать
+  </li>
+
   <li>2025.05.15 чт
     <br>1. <strong>Книга</strong> <i>2020 Дейтел - Как программировать на C 1000стр</i> прочитать 400-410стр
     <br>2. <strong>Книга</strong> <i>2015 Кузин - Программирование на языке Си 144стр</i> прочитать 20-30стр
-    <br>3. <strong>Курс</strong> <i>2023 ФТЛ Спортпрог c++</i> закончил Занятие 1
-    <br>4. <strong>Курс</strong> <i>2023 ФТЛ Спортпрог c++</i> начал Занятие 2
+    <br>3. <strong>Курс</strong> <i>2023 ФТЛ Спортпрог c++</i> Занятие 1 закончить
+    <br>4. <strong>Курс</strong> <i>2023 ФТЛ Спортпрог c++</i> Занятие 2 начать
   </li>
 
   <li>2025.05.14 ср
     <br>1. <strong>Книга</strong> <i>2020 Дейтел - Как программировать на C 1000стр</i> прочитать 390-400стр
     <br>2. <strong>Книга</strong> <i>2015 Кузин - Программирование на языке Си 144стр</i> прочитать 10-20стр
-    <br>3. <strong>Курс</strong> <i>2023 ФТЛ Спортпрог c++</i> начал Занятие 1
+    <br>3. <strong>Курс</strong> <i>2023 ФТЛ Спортпрог c++</i> Занятие 1 начать
   </li>
 
   <li>2025.05.13 вт
