--- a/src/components/front/front-learned/pages/elem-video.html
+++ b/src/components/front/front-learned/pages/elem-video.html
@@ -1,155 +1,233 @@
 <h1>Изученные видео курсы по frontend разработке</h1>
 <ol>
   <li class="red">2021-08-17 вт
-    <p>Video Course<br><strong>[2011] Мини-курс сайта с нуля на WordPress</strong><br><strong>WebForMySelf Андрей
-        Бернацкий</strong><br>8 уроков<br>Время 7ч 39м</p>
+    <br>Video Course
+    <br><strong>[2011] Мини-курс сайта с нуля на WordPress</strong>
+    <br><strong>WebForMySelf Андрей Бернацкий</strong>
+    <br>8 уроков<br>Время 7ч 39м
   </li>
   <li class="red">2021-08-18 ср
-    <p>Video Course<br><strong>[2012] Git обучение основам</strong><br><strong>Lynda.com Kevin Skoglundк</strong><br>14
-      уроков<br>Время 6ч 26м</p>
+    <br>Video Course
+    <br><strong>[2012] Git обучение основам</strong>
+    <br><strong>Lynda.com Kevin Skoglundк</strong>
+    <br>14 уроков<br>Время 6ч 26м
   </li>
   <li class="red">2021-06-11 пт
-    <p>Video Course<br><strong>[2013] Создание сайта на 1С Битрикс с нуля</strong><br><strong>camouf.ru Михаил
-        Базаров</strong><br>14 уроков<br>Время 6ч 23м</p>
+    <br>Video Course
+    <br><strong>[2013] Создание сайта на 1С Битрикс с нуля</strong>
+    <br><strong>camouf.ru Михаил Базаров</strong>
+    <br>14 уроков<br>Время 6ч 23м
   </li>
   <li class="red">2021-05-27 чт
-    <p>Video Course<br><strong>[2013] Язык программирования JavaScript</strong><br><strong>Hexlet Рахим
-        Давлеткалиев</strong><br>7 уроков<br>Время 4ч 42м</p>
+    <br>Video Course
+    <br><strong>[2013] Язык программирования JavaScript</strong>
+    <br><strong>Hexlet Рахим Давлеткалиев</strong>
+    <br>7 уроков<br>Время 4ч 42м
   </li>
   <li class="red">2021-07-19 пн
-    <p>Video Course<br><strong>[2014] Bootstrap 3 Добавь интерактивности на свой сайт</strong><br><strong>Lynda.com Jen
-        Kramer</strong><br>5 уроков<br>Время 1ч 56м</p>
+    <br>Video Course
+    <br><strong>[2014] Bootstrap 3 Добавь интерактивности на свой сайт</strong>
+    <br><strong>Lynda.com Jen  Kramer</strong>
+    <br>5 уроков<br>Время 1ч 56м
   </li>
   <li class="red">2021-06-10 чт
-    <p>Video Course<br><strong>[2015] Основы программирования</strong><br><strong>CS50 Harvard </strong><br>23
-      урока<br>Время 20ч 42м</p>
+    <br>Video Course
+    <br><strong>[2015] Основы программирования</strong>
+    <br><strong>CS50 Harvard </strong>
+    <br>23 урока<br>Время 20ч 42м
   </li>
   <li class="red">2021-05-20 чт
-    <p>Video Course<br><strong>[2015] HTML_CSS. Основы создания сайтов</strong><br><strong>GeekBrains Юрий
-        Жаворонок</strong><br>8 уроков<br>Время 19ч 42м</p>
+    <br>Video Course
+    <br><strong>[2015] HTML_CSS. Основы создания сайтов</strong>
+    <br><strong>GeekBrains Юрий Жаворонок</strong>
+    <br>8 уроков<br>Время 19ч 42м
   </li>
   <li class="red">2021-06-05 сб
-    <p>Video Course<br><strong>[2015] Видео курс HTML CSS</strong><br><strong>ITVDN Александр Петрик</strong><br>8
-      уроков<br>Время 9ч 30м</p>
+    <br>Video Course
+    <br><strong>[2015] Видео курс HTML CSS</strong>
+    <br><strong>ITVDN Александр Петрик</strong>
+    <br>8 уроков<br>Время 9ч 30м
   </li>
   <li class="red">2022-10-13
-    <p>Video Course<br><strong>[2015] JavaScript Базовый курс</strong><br><strong>ITVDN Дмитрий Охрименко</strong><br>5
-      уроков<br>Время 7ч 22м</p>
+    <br>Video Course
+    <br><strong>[2015] JavaScript Базовый курс</strong>
+    <br><strong>ITVDN Дмитрий Охрименко</strong>
+    <br>5 уроков<br>Время 7ч 22м
   </li>
   <li class="red">2022-09-16
-    <p>Video Course<br><strong>[2015] JavaScript Шаблоны</strong><br><strong>ITVDN Дмитрий Охрименко</strong><br>5
-      уроков<br>Время 5ч</p>
+    <br>Video Course
+    <br><strong>[2015] JavaScript Шаблоны</strong>
+    <br><strong>ITVDN Дмитрий Охрименко</strong>
+    <br>5 уроков<br>Время 5ч
   </li>
   <li class="red">2021-07-01 чт
-    <p>Video Course<br><strong>[2015] HTML-верстка Инструменты и приемы профессиональной front-end
-        разработки</strong><br><strong>Нетология </strong><br>22 видео<br>Время 37ч 25м</p>
+    <br>Video Course
+    <br><strong>[2015] HTML-верстка Инструменты и приемы профессиональной front-end разработки</strong>
+    <br><strong>Нетология </strong>
+    <br>22 видео<br>Время 37ч 25м
   </li>
   <li class="red">2021-08-14 сб
-    <p>Video Course<br><strong>[2015] Курс Bootstrap</strong><br><strong>wh-db.com Сергей Никонов</strong><br>8
-      уроков<br>Время 3ч 31м</p>
+    <br>Video Course
+    <br><strong>[2015] Курс Bootstrap</strong>
+    <br><strong>wh-db.com Сергей Никонов</strong>
+    <br>8 уроков<br>Время 3ч 31м
   </li>
   <li class="red">2021-10-26 вт
-    <p>Video Course<br><strong>[2015] Школа Вебмастеров</strong><br><strong>Яндекс-Академия </strong><br><br>Время 22ч
-    </p>
+    <br>Video Course
+    <br><strong>[2015] Школа Вебмастеров</strong>
+    <br><strong>Яндекс-Академия </strong>
+    <br><br>Время 22ч
   </li>
   <li class="red">2021-11-02 вт
-    <p>Video Course<br><strong>[2015] Четвертая Вебмастерская</strong><br><strong>Яндекс-Академия </strong><br><br>Время
-      4ч 49м</p>
+    <br>Video Course
+    <br><strong>[2015] Четвертая Вебмастерская</strong>
+    <br><strong>Яндекс-Академия </strong>
+    <br><br>Время 4ч 49м
   </li>
   <li class="red">2022-09-16
-    <p>Video Course<br><strong>[2016] ECMAScript6</strong><br><strong>CodeDojo </strong><br>18 уроков<br>Время 4ч 28м
-    </p>
+    <br>Video Course
+    <br><strong>[2016] ECMAScript6</strong>
+    <br><strong>CodeDojo </strong>
+    <br>18 уроков<br>Время 4ч 28м
   </li>
   <li class="red">2021-11-22 пн
-    <p>Video Course<br><strong>[2016] Базовый HTML и CSS</strong><br><strong>HTML Academy </strong><br><br>Время 18ч 37м
-    </p>
+    <br>Video Course
+    <br><strong>[2016] Базовый HTML и CSS</strong>
+    <br><strong>HTML Academy </strong>
+    <br><br>Время 18ч 37м
   </li>
   <li class="red">2022-09-24
-    <p>Video Course<br><strong>[2016] How to JavaScript</strong><br><strong>ITVDN Валерия</strong><br>41 урок<br>Время
-      2ч 55м</p>
+    <br>Video Course
+    <br><strong>[2016] How to JavaScript</strong>
+    <br><strong>ITVDN Валерия</strong>
+    <br>41 урок<br>Время 2ч 55м
   </li>
   <li class="red">2021-12-28 вт
-    <p>Video Course<br><strong>[2016] Основы использования Git</strong><br><strong>ITVDN Александр
-        Пономаренко</strong><br><br>Время 1ч 2м</p>
+    <p>Video Course<br><strong>[2016] Основы использования Git</strong><br><strong>ITVDN Александр Пономаренко</strong><br><br>Время 1ч 2м
   </li>
   <li class="red">2022-11-25 пт
-    <p>Video Course<br><strong>[2016] Пoнятный JavaScript</strong><br><strong>jsexpert Евгений
-        Калюжный</strong><br><br>Время 31ч 9м</p>
+    <br>Video Course
+    <br><strong>[2016] Пoнятный JavaScript</strong>
+    <br><strong>jsexpert Евгений Калюжный</strong>
+    <br><br>Время 31ч 9м
   </li>
   <li class="red">2022-06-09 чт
-    <p>Video Course<br><strong>[2016] Комплексное обучение JavaScript</strong><br><strong>LoftSchool Сергей
-        Мелюков</strong><br><br>Время 38ч</p>
+    <br>Video Course
+    <br><strong>[2016] Комплексное обучение JavaScript</strong>
+    <br><strong>LoftSchool Сергей Мелюков</strong>
+    <br><br>Время 38ч
   </li>
   <li class="red">2022-01-31 пн
-    <p>Video Course<br><strong>[2017] Собери свою сборку на Gulp 4</strong><br><strong>FrontCoder Анатолий
-        Саламатин</strong><br>10<br>Время 1ч 44м</p>
+    <br>Video Course
+    <br><strong>[2017] Собери свою сборку на Gulp 4</strong>
+    <br><strong>FrontCoder Анатолий Саламатин</strong>
+    <br>10<br>Время 1ч 44м
   </li>
   <li class="red">2022-10-09 вс
-    <p>Video Course<br><strong>[2017] ECMAScript 6</strong><br><strong>ITVDN Сергей Рубец</strong><br>9 уроков<br>Время
-      6ч 15м</p>
+    <br>Video Course
+    <br><strong>[2017] ECMAScript 6</strong>
+    <br><strong>ITVDN Сергей Рубец</strong>
+    <br>9 уроков<br>Время 6ч 15м
   </li>
   <li class="red">2022-01-24
-    <p>Video Course<br><strong>[2018] Уроки EcmaScript 6</strong><br><strong>Udemy Михаил Непомнящий</strong><br>15
-      уроков<br>Время 1ч 55м</p>
+    <br>Video Course
+    <br><strong>[2018] Уроки EcmaScript 6</strong>
+    <br><strong>Udemy Михаил Непомнящий</strong>
+    <br>15 уроков<br>Время 1ч 55м
   </li>
   <li class="red">2022-01-19 ср
-    <p>Video Course<br><strong>[2018] Gulp Сборка</strong><br><strong>Webcademy Юриий Ключевский</strong><br><br>Время
-      6ч 14м</p>
+    <br>Video Course
+    <br><strong>[2018] Gulp Сборка</strong>
+    <br><strong>Webcademy Юриий Ключевский</strong>
+    <br><br>Время 6ч 14м
   </li>
   <li class="red">2021-05-04 вт
-    <p>Video Course<br><strong>[2019] HTML и CSS для начинающих 01. Основы HTML и CSS</strong><br><strong>Brainscloud
-        Дмитрий Валак</strong><br>43 урока<br>Время 10ч 20м</p>
+    <br>Video Course
+    <br><strong>[2019] HTML и CSS для начинающих 01. Основы HTML и CSS</strong>
+    <br><strong>Brainscloud Дмитрий Валак</strong>
+    <br>43 урока<br>Время 10ч 20м
   </li>
   <li class="red">2021-05-22 сб
-    <p>Video Course<br><strong>[2019] HTML и CSS для начинающих 02. Верстка адаптивного сайта с
-        нуля</strong><br><strong>Brainscloud Дмитрий Валак</strong><br>16 уроков<br>Время 2ч 49м</p>
+    <br>Video Course
+    <br><strong>[2019] HTML и CSS для начинающих 02. Верстка адаптивного сайта с нуля</strong>
+    <br><strong>Brainscloud Дмитрий Валак</strong>
+    <br>16 уроков<br>Время 2ч 49м
   </li>
   <li class="red">2021-10-14 чт
-    <p>Video Course<br><strong>[2019] Быстрая и комфортная верстка сайтов</strong><br><strong>Brainscloud Дмитрий
-        Валак</strong><br>6 уроков<br>Время 7ч 35м</p>
+    <br>Video Course
+    <br><strong>[2019] Быстрая и комфортная верстка сайтов</strong>
+    <br><strong>Brainscloud Дмитрий Валак</strong>
+    <br>6 уроков<br>Время 7ч 35м
   </li>
   <li class="red">2021-11-23 вт
-    <p>Video Course<br><strong>[2019] Figma 3.0 для дизайнера</strong><br><strong>Skillbox Антон
-        Рыбаков</strong><br><br>Время 13ч 40м</p>
+    <br>Video Course
+    <br><strong>[2019] Figma 3.0 для дизайнера</strong>
+    <br><strong>Skillbox Антон Рыбаков</strong>
+    <br><br>Время 13ч 40м
   </li>
   <li class="red">2021-12-28 вт
-    <p>Video Course<br><strong>[2019] Курс по GIT</strong><br><strong>Udemy Максим Гузив</strong><br><br>Время 3ч 59м
-    </p>
+    <br>Video Course
+    <br><strong>[2019] Курс по GIT</strong>
+    <br><strong>Udemy Максим Гузив</strong>
+    <br><br>Время 3ч 59м
   </li>
   <li class="red">2021-11-30 вт
-    <p>Video Course<br><strong>[2019] Шаблонизатор Pug_jade - современный ускоритель для HTML</strong><br><strong>Udemy
-        Михаил Непомнящий</strong><br>6 уроков<br>Время 1ч 58м</p>
+    <br>Video Course
+    <br><strong>[2019] Шаблонизатор Pug_jade - современный ускоритель для HTML</strong>
+    <br><strong>Udemy Михаил Непомнящий</strong>
+    <br>6 уроков<br>Время 1ч 58м
   </li>
   <li class="red">2021-12-24 пт
-    <p>Video Course<br><strong>[2019] Git. Полный курс для начинающих</strong><br><strong>Udemy Наиль
-        Алишев</strong><br><br>Время 4ч 47м</p>
+    <br>Video Course
+    <br><strong>[2019] Git. Полный курс для начинающих</strong>
+    <br><strong>Udemy Наиль Алишев</strong>
+    <br><br>Время 4ч 47м</p>
   </li>
   <li class="red">2022-03-05 сб
-    <p>Video Course<br><strong>[2019] JavaScript. Полное руководство</strong><br><strong>WebForMySelf Владилен
-        Минин</strong><br><br>Время 32ч 13м</p>
+    <br>Video Course
+    <br><strong>[2019] JavaScript. Полное руководство</strong>
+    <br><strong>WebForMySelf Владилен Минин</strong><br><br>Время 32ч 13м
   </li>
   <li class="red">2022-10-29 сб
-    <p>Video Course<br><strong>[2019] Премиум курс по EcmaScript 6</strong><br><strong> Владилен Минин</strong><br>17
-      уроков<br>Время 3ч 9м</p>
+    <br>Video Course
+    <br><strong>[2019] Премиум курс по EcmaScript 6</strong>
+    <br><strong> Владилен Минин</strong>
+    <br>17 уроков<br>Время 3ч 9м
   </li>
   <li class="red">2021-12-20 пн
-    <p>Video Course<br><strong>[2020] Основы использования Git</strong><br><strong>ITVDN Анна Маргина</strong><br>6
-      уроков<br>Время 2ч 13м</p>
+    <br>Video Course
+    <br><strong>[2020] Основы использования Git</strong>
+    <br><strong>ITVDN Анна Маргина</strong>
+    <br>6 уроков<br>Время 2ч 13м
   </li>
   <li class="red">2022-11-01 вт
-    <p>Video Course<br><strong>[2020] Сложный JavaScript простым языком</strong><br><strong> Владилен
-        Минин</strong><br>17 уроков<br>Время 5ч 55м</p>
+    <br>Video Course
+    <br><strong>[2020] Сложный JavaScript простым языком</strong>
+    <br><strong> Владилен Минин</strong>
+    <br>17 уроков<br>Время 5ч 55м
   </li>
   <li class="red">2022-11-10 чт
-    <p>Video Course<br><strong>[2021] Ускоренный курс по современному Javascript</strong><br><strong>Udemy Юра
-        Аллахвердов</strong><br><br>Время 10ч</p>
+    <br>Video Course
+    <br><strong>[2021] Ускоренный курс по современному Javascript</strong>
+    <br><strong>Udemy Юра Аллахвердов</strong>
+    <br><br>Время 10ч
   </li>
   <li class="red">2022-10-26 ср
-    <p>Video Course<br><strong>[2021] ES6</strong><br><strong> Василий Муравьев</strong><br>13 уроков<br>Время 2ч 49м
-    </p>
+    <br>Video Course
+    <br><strong>[2021] ES6</strong>
+    <br><strong> Василий Муравьев</strong>
+    <br>13 уроков<br>Время 2ч 49м
   </li>
   <li class="red">2022-10-28 пт
-    <p>Video Course<br><strong>[2021] Уроки Javascript</strong><br><strong> Василий Муравьев</strong><br>12
-      уроков<br>Время 3ч 17м</p>
+    <br>Video Course
+    <br><strong>[2021] Уроки Javascript</strong>
+    <br><strong> Василий Муравьев</strong>
+    <br>12 уроков<br>Время 3ч 17м
+  </li>
+  <li class="red">2025-05-08 чт
+    <br>Video Course
+    <br><strong>[2025] Спортивное программирование ЯрГУ школьники</strong>
+    <br><strong> Игорь Маслеников</strong>
+    <br>34 видео<br>Время 80ч 48м
   </li>
 </ol>
