--- a/src/components/front/front-edu/pages/elem-edu-dsr2024cpp.html
+++ b/src/components/front/front-edu/pages/elem-edu-dsr2024cpp.html
@@ -43,5 +43,7 @@
   <p><a href="lec-17.html" class="js-dsr-lecture">Лекция 17 (01.04.2025)</a></p>
   <p><a href="lec-18.html" class="js-dsr-lecture">Лекция 18 (17.04.2025)</a></p>
   <p><a href="lec-19.html" class="js-dsr-lecture">Лекция 19 (14.05.2025)</a></p>
+  <p><a href="lec-20.html" class="js-dsr-lecture">Лекция 20 (20.05.2025)</a></p>
+  <p><a href="lec-21.html" class="js-dsr-lecture">Лекция 21 (26.05.2025)</a></p>
 </article>
 
